allprojects{
	group 'top.nintha.anno'
	version '1.0.0'
}

subprojects{
	apply plugin: 'java'
	sourceCompatibility = 1.8
	repositories {
		maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
	    mavenCentral()
	}

	dependencies {
	    testCompile group: 'junit', name: 'junit', version: '4.12'
	}

	tasks.withType(JavaCompile) {
		options.encoding = "UTF-8"
//		options.compilerArgs += [
//		        '--add-exports','jdk.compiler/com.sun.tools.javac=ALL-UNNAMED'
//		]
	}
}



